@startuml


class GameController{
    + Player PlayerOne
    + Player PlayerTwo
    + Awake()
    + Start()
}

abstract class Player <<MonoBehaviour>>{

}

abstract class BodyPart <<MonoBehaviour>>{
    + Player Owner
}

class Hand {

}

class Foot {

}

class Body {

}

interface IPlayerController
{
    + string PlayerName { get; }
    + double Dmg { get; }
    + double Hp { get; }
    + double MaxHp { get; } //evt for regen
    + double Speed { get; }
    + void MoveLeft();
    + void MoveRight();
    + void Attack();
    + void Block();
}

GameController *-- Player

Body -up-|> BodyPart
Hand -up-|> BodyPart
Foot -up-|> BodyPart

Player -- Hand
Player -- Foot
Player -- Body



@enduml